--- a/template/admin.html
+++ b/template/admin.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="navbar bd-navbar navbar-expand-lg navbar-dark bg-primary">
-        <a href="cliente.html" class="navbar-brand">Grupo Gestión Inmobiliaria</a>
+        <a href="admin.html" class="navbar-brand">Grupo Gestión Inmobiliaria</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navegacion">
                 <span class="navbar-toggler-icon"></span>
             </button>
