--- a/template/admin.html
+++ b/template/admin.html
@@ -83,7 +83,7 @@
             <div class="row text-center panel justify-content-center align-middle">
                 <div class="col-lg-4 col-md-6 col-12 ">
                     <div class="boton bg-success d-flex align-items-center justify-content-center">
-                        <a href="nuevo-inquilo.html" class="text-light">
+                        <a href="registro.html" class="text-light">
                             <i class="material-icons">add</i>
                             <p>Nuevo Inquilino</p>
                         </a>
